# Playdate-C-Hello-World

./: .gitignore  CMakeLists.txt  Notes.txt  Project setup.md  README.md  arm.cmake  build-dev-setup.bat  build-sim-setup.bat  build_setup.bat
Source/: stub
src/: main.c
